--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
 
         <div class="hero-right">
-          <img class="hero-img" src="./Assets/hero-bg.png" alt="" />
-          <!-- <img class="hero-img" src="./Assets/phone.png" alt="" /> -->
+          <!-- <img class="hero-img" src="./Assets/hero-bg.png" alt="" /> -->
+          <img class="hero-img" src="./Assets/phone.png" alt="" />
         </div>
       </div>
 
