--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <img class="logo" src="./Assets/pharmcare.svg" alt="PharmCare logo" />
-      <img class="menu" src="./Assets/Group 456.svg" alt="" />
+      <!-- <img class="menu" src="./Assets/Group 456.svg" alt="" /> -->
 
       <!-- <nav class="menu">
         <ul class="menu-nav">
@@ -53,7 +53,7 @@
       </div>
 
       <div class="about-section">
-        <div class="about-item">
+        <div class="about-item give-advice">
           <h2>We Give Advice</h2>
           <div class="about-info">
             <img class="about-img" src="./Assets/profile-circle.png" alt="" />
@@ -87,83 +87,37 @@
             </div>
           </div>
         </div>
-        <img class="about-item" src="./Assets/Prescription Drug.png" alt="" />
+        <img
+          class="about-item first-img"
+          src="./Assets/Prescription Drug.png"
+          alt=""
+        />
 
-        <div class="about-item">
+        <div class="about-item online-health">
           <div class="about-info">
             <img class="about-img" src="./Assets/Group 455.png" alt="" />
-            <h2>
-              Online <br />
-              Health check
-            </h2>
+            <div>
+              <h2>
+                Online <br />
+                Health check
+              </h2>
+              <h4>
+                Health is wealth. Check your health status with us online and
+                get an idea of your mental and physical wellbeing. We run a 24/7
+                Operation with seamless technology at the fore-front. Results
+                are accurate and timely. Schedule your OHC with us today by
+                contacting us.
+              </h4>
+              <button>Contact us</button>
+            </div>
           </div>
-          <h4>
-            Health is wealth. Check your health status with us online and get an
-            idea of your mental and physical wellbeing. We run a 24/7 Operation
-            with seamless technology at the fore-front. Results are accurate and
-            timely. Schedule your OHC with us today by contacting us.
-          </h4>
-
-          <button>Contact us</button>
         </div>
-        <img class="about-item" src="./Assets/Online Health Check.png" alt="" />
+        <img
+          class="about-item second-img"
+          src="./Assets/Online Health Check.png"
+          alt=""
+        />
       </div>
-
-      <!-- <div class="services-section">
-          <div>
-            <h2>We are here to provide you with the best Service.</h2>
-            <h4>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-              ad minim veniam, quis nostrud exercitation.
-            </h4>
-          </div>
-  
-          <div>
-            <img src="./Assets/Group 7.png" alt="" />
-            <h3>Fast Delivery</h3>
-            <h4>Contrary to popular belief, Lorem Ipsum is not simply random.</h4>
-          </div>
-  
-          <div>
-            <img src="./Assets/Rectangle 14.png" alt="" />
-            <h3>$0 Fee's</h3>
-            <h4>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots.
-            </h4>
-          </div>
-  
-          <div>
-            <img src="./Assets/Rectangle 16.png" alt="" />
-            <h3>0% Interest</h3>
-            <h4>Contrary to popular belief, Lorem Ipsum is not simply random</h4>
-          </div>
-  
-          <div>
-            <img src="./Assets/Rectangle 15.png" alt="" />
-            <h3>No Credit Checks</h3>
-            <h4>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots.
-            </h4>
-          </div>
-  
-          <div>
-            <img src="./Assets/Rectangle 17.png" alt="" />
-            <h3>Chat Support</h3>
-            <h4>Contrary to popular belief, Lorem Ipsum is not simply random</h4>
-          </div>
-  
-          <div>
-            <img src="./Assets/Group 6.png" alt="" />
-            <h3>Fixed Payment Option</h3>
-            <h4>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots.
-            </h4>
-          </div>
-        </div> -->
 
       <div class="try-section">
         <div class="try-left">
@@ -174,7 +128,12 @@
             wellness
           </h4>
           <div class="download-btns">
-            <img class="db" src="./Assets/icon-app-googlestore.svg" alt="" />
+            <img
+              id="google-store-btn"
+              class="db"
+              src="./Assets/icon-app-googlestore.svg"
+              alt=""
+            />
             <img class="db" src="./Assets/icon-app-appstore.svg" alt="" />
           </div>
         </div>
