--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <div class="footer">
         <div>
-          <img src="./Assets/pharmcare.svg" alt="logo" />
+          <img class="logo" src="./Assets/pharmcare.svg" alt="logo" />
           <h4>
             Get the right drugs for the right ailment by writing down the
             symptoms. Call us right away and get information, while talking yo
