--- a/index.html
+++ b/index.html
@@ -115,39 +115,42 @@
       </section>
 
       <section class="footer" data-aos="fade">
-        <div>
-          <img class="logo" src="./Assets/pharmcare.svg" alt="logo" />
-          <h4>
-            Get the right drugs for the right ailment by writing down the
-            symptoms. Call us right away and get information, while talking yo
-            experienced health care experts.
-          </h4>
-        </div>
-
-        <div class="features">
-          <h4>Features</h4>
-          <li>Health SEO</li>
-          <li>Medicine Evaluation</li>
-          <li>Virtual Doc</li>
-          <li>Appointment Booking</li>
-        </div>
-
-        <div class="company">
-          <h4>Company</h4>
-          <li>About</li>
-          <li>FAQ</li>
-          <li>Our Team</li>
-          <li>Contact Us</li>
-        </div>
-
-        <div class="social">
-          <h4>Follow us</h4>
-          <div class="footer-links">
-            <img src="./Assets/youtube-footer.png" alt="" />
-            <img src="./Assets/facebook-footer.png" alt="" />
-            <img src="./Assets/twitter-footer.png" alt="" />
+        <div class="footer-info">
+          <div>
+            <img class="logo" src="./Assets/pharmcare.svg" alt="logo" />
+            <h4>
+              Get the right drugs for the right ailment by writing down the
+              symptoms. Call us right away and get information, while talking yo
+              experienced health care experts.
+            </h4>
           </div>
-        </div>
+
+          <div class="footer-header">
+            <h4>Features</h4>
+            <li>Health SEO</li>
+            <li>Medicine Evaluation</li>
+            <li>Virtual Doc</li>
+            <li>Appointment Booking</li>
+          </div>
+
+          <div class="footer-header">
+            <h4>Company</h4>
+            <li>About</li>
+            <li>FAQ</li>
+            <li>Our Team</li>
+            <li>Contact Us</li>
+          </div>
+
+          <div class="footer-header">
+            <h4>Follow us</h4>
+            <div class="footer-links">
+              <img src="./Assets/youtube-footer.png" alt="" />
+              <img src="./Assets/facebook-footer.png" alt="" />
+              <img src="./Assets/twitter-footer.png" alt="" />
+            </div>
+          </div>
+      </div>
+        <p>Developed by <a href="https://github.com/TheKachi"> TheKachi</a></p>
       </section>
     </main>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
